# mcp-hub

./: LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: config.rs  credentials.rs  discovery.rs  mod.rs  registry.rs
src/components/: ImportDialog.tsx  Layout.tsx
src/components/ui/: checkbox.tsx
src/pages/: Dashboard.tsx  Instances.tsx  Servers.tsx  Settings.tsx
src/store/: index.ts
src/types/: index.ts
