[package]
name = "mcp-hub"
version = "0.1.0"
description = "MCP Server Manager - Centralized management for Model Context Protocol servers"
authors = ["MCP Hub Team"]
edition = "2021"

[lib]
name = "mcp_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
keyring = "3"
dirs = "6"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
log = "0.4"
env_logger = "0.11"
